--- a/package.json
+++ b/package.json
@@ -27,17 +27,17 @@
     "url": "https://github.com/svenkatreddy/puppeteer-loadtest/issues"
   },
   "bin": {
-    "casperjs-loadtest": "index.js"
+    "puppeteer-loadtest": "index.js"
   },
   "homepage": "https://github.com/svenkatreddy/puppeteer-loadtest#readme",
   "dependencies": {
-    "debug": "^3.0.0",
+    "debug": "^3.1.0",
     "execution-time": "^1.2.0",
     "minimist": "^1.2.0"
   },
   "devDependencies": {
-    "mocha": "^3.5.0",
+    "mocha": "^4.1.0",
     "mock-require": "^2.0.2",
-    "ultimate-chai": "^4.0.0"
+    "ultimate-chai": "^4.1.0"
   }
 }
